fix: [#156] fix the overlapping issue on the CTA button in mobile (#159)

--- a/components/UI/FooterBanner/FooterBanner.module.css
+++ b/components/UI/FooterBanner/FooterBanner.module.css
@@ -1,6 +1,6 @@
 .footer {
   bottom: 24px;
-  z-index: 999;
+  z-index: 998;
   padding: 2px 1rem;
   margin: 10px;
   font-weight: 500;
